[package]
name = "zim"
version = "0.3.1"
authors = ["Friedel Ziegelmayer <dignifiedquire@gmail.com>", "Andrew Chin <achin@eminence32.net>"]
documentation = "https://docs.rs/zim/"
repository = "https://github.com/dignifiedquire/zim"
homepage = "https://github.com/dignifiedquire/zim"
description = "ZIM reading and extraction"
readme = "README.md"
license = "Apache-2.0/MIT"
edition = "2021"

keywords = ["parser", "zim"]
categories = ["encoding", "parser-implementations"]

[dependencies]
byteorder = "^1.2"
memmap = "^0.7"
clap = "^3"
stopwatch = "^0.0.7"
pbr = "^1.0"
xz2 = "^0.1"
bitreader = "^0.3"
num_cpus = "1.12"
md-5 = "0.10.0"
hex = "0.4.0"
indicatif = "0.17"
rayon = "1.3.0"
ouroboros = "0.15.0"
thiserror = "1.0.31"
zstd = "0.11.2"

[[bin]]
name = "extract-zim"
path = "src/bin/extract_zim.rs"

[[bin]]
name = "ipfs-link"
path = "src/bin/ipfs_link.rs"

[[bin]]
name = "zim-info"
path = "src/bin/zim_info.rs"
